k8s/test/tomcat/02-tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  namespace: test
spec:
  selector:
    k8s-app: tomcat
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: ajp
    port: 8009
    targetPort: ajp
